fixing bug on shifting layout on load

--- a/src/scss/vendors-extensions/_bs-variables.scss
+++ b/src/scss/vendors-extensions/_bs-variables.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Quicksand";
-  src: url("/src/public/font/Quicksand-VariableFont_wght.ttf") format("truetype-variations");
+  src: url("/src/public/fonts/Quicksand-VariableFont_wght.ttf") format("truetype-variations");
   font-weight: 300 700; 
   font-display: swap;
 }
